課題とかいろいろ完成

--- a/WPF/ColorCheaker/MainWindow.xaml
+++ b/WPF/ColorCheaker/MainWindow.xaml
@@ -28,17 +28,17 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Row="0" Grid.Column="0" Text="R" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
-            <Slider x:Name="rSlider" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left"  VerticalAlignment="Bottom" TickPlacement="TopLeft" Width="130"  Maximum="255" ValueChanged="Slider_ValueChanged" />
+            <Slider x:Name="rSlider" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left"  VerticalAlignment="Bottom" TickPlacement="TopLeft" Width="130"  Maximum="255" ValueChanged="Slider_ValueChanged" IsSnapToTickEnabled="True" />
             <TextBox x:Name="rValue" Grid.Row="0" Grid.Column="2"  HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" Margin="10,0,0,0" Width="36"  
                      Text="{Binding Value, ElementName=rSlider, UpdateSourceTrigger=PropertyChanged,StringFormat={}{0:0}, Mode=TwoWay}" />
 
             <TextBlock Grid.Row="1" Grid.Column="0" Text="G" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
-            <Slider x:Name="gSlider" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"  VerticalAlignment="Bottom" TickPlacement="TopLeft" Width="130" Maximum="255" ValueChanged="Slider_ValueChanged"/>
+            <Slider x:Name="gSlider" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" TickPlacement="TopLeft" Width="130" Maximum="255" ValueChanged="Slider_ValueChanged" Margin="0,47,0,0" IsSnapToTickEnabled="True"/>
             <TextBox x:Name="gValue" Grid.Row="1" Grid.Column="2"  HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" Margin="10,0,0,0" Width="36"  
                      Text="{Binding Value, ElementName=gSlider, UpdateSourceTrigger=PropertyChanged,StringFormat={}{0:0}, Mode=TwoWay}" />
 
             <TextBlock Grid.Row="2" Grid.Column="0" Text="B" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
-            <Slider x:Name="bSlider" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left"  VerticalAlignment="Bottom" TickPlacement="TopLeft" Width="130" Maximum="255" ValueChanged="Slider_ValueChanged"/>
+            <Slider x:Name="bSlider" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left"  VerticalAlignment="Bottom" TickPlacement="TopLeft" Width="130" Maximum="255" ValueChanged="Slider_ValueChanged" IsSnapToTickEnabled="True"/>
             <TextBox x:Name="bValue" Grid.Row="2" Grid.Column="2"  HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" Margin="10,0,0,0" Width="36"  
                      Text="{Binding Value, ElementName=bSlider, UpdateSourceTrigger=PropertyChanged,StringFormat={}{0:0}, Mode=TwoWay}" />
             <ComboBox x:Name="ColorData" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center"   VerticalAlignment="Center" Width="120"
@@ -58,7 +58,7 @@
             </ComboBox>
         </Grid>
         <Grid Grid.Column="2">
-        <Button x:Name="stockButton" Grid.Column="2" Content="STOCK" Margin="5,10,10,214" Width="216" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"  Height="45" Click="stockButton_Click"/>
+            <Button x:Name="stockButton" Grid.Column="2" Content="STOCK" Margin="5,10,10,214" Width="216" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"  Height="45" Click="stockButton_Click"/>
 
         </Grid>
         <ListBox x:Name="stockList" Grid.Column="2" HorizontalAlignment="Left" Height="199" Margin="5,60,0,0" VerticalAlignment="Top" Width="216" SelectionChanged="stockList_SelectionChanged">
